<resources>
    <string name="app_name">Juego Memoria</string>
    <string name="txt_titulo_text">Prueba tu memoria</string>
    <string name="jugar">Jugar</string>
    <string name="salir">Salir</string>
    <string name="imagen_juego">Imagen Juego</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="txt_puntuacion">"Puntuación: "</string>
    <string name="record">record</string>
</resources>