<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JuegoActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/img00"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img01"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img02"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img03"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/img10"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img11"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img12"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img13"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/img20"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img21"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img22"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img23"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/img30"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img31"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img32"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />

            <ImageButton
                android:id="@+id/img33"
                android:layout_width="@dimen/ancho_imagen"
                android:layout_height="@dimen/alto_imagen"
                android:layout_margin="@dimen/margen_imagen"
                android:contentDescription="@string/imagen_juego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="reiniciarJuego"
        android:text="@string/reiniciar"
        app:layout_constraintBottom_toTopOf="@+id/txtPuntuacion"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btnJuegoSalir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="salirJuego"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="@+id/btnReiniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btnReiniciar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txtPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_puntuacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReiniciar" />
</androidx.constraintlayout.widget.ConstraintLayout>